# El-Modeer

./: .gitignore  Cargo.toml  README.md  install.sh  store
src/: constants.rs  main.rs  proc.rs  styles.rs  util.rs
src/metrics/: disk.rs  histogram.rs  mod.rs  mprocess.rs  zprocess.rs
src/metrics/graphics/: device.rs  graphics_none.rs  graphics_nvidia.rs  mod.rs
src/renderer/: column.rs  cpu.rs  disk.rs  graphics.rs  help.rs  macros.rs  mod.rs  network.rs  process.rs  section.rs  style.rs  system_info.rs  title.rs
tree/Modeer/: package-lock.json  package.json
tree/Modeer/src/: App.css  App.jsx
tree/Modeer/src-tauri/: Cargo.toml  tauri.conf.json
tree/Modeer/src-tauri/src/: main.rs
