[package]
name = "el-modeer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
procfs = "0.15.1"
periodic = "0.1.1"
crossbeam-channel = "0.5.8"
num-rational = "0.4.1"
ctrlc = "3.2.5"
sysinfo = "0.28.4"
termion = "2.0.1"
lazy_static = "1.4.0"
users = "0.11.0"
