[package]
name = "el-modeer"
version = "0.14.0"
authors = ["Benjamin Vaisvil"]
edition = "2018"
description = "Similar to top or htop but with CPU, Network Usage, and Disk Usage charts."
readme = "README.md"
homepage = "https://github.com/bvaisvil/zenith"
repository = "https://github.com/bvaisvil/zenith"
license = "MIT"
keywords = ["system monitor", "tui", "process monitor", "sysinfo"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
tui = { version = "0.19.*", features = ["crossterm"], default-features = false }
crossterm = "0.25.*"
byte-unit = "~4.0.17"
users = "0.11.0"
num-derive = "0.3.3"
num-traits = "0.2"
heim = {git = "https://github.com/bvaisvil/heim.git", branch="zenith_changes", features = ["full"]}
futures = "0.3.21"
gumdrop = { version = "~0.8.1", features = ["default_expr"] }
chrono = "~0.4.22"
sysinfo = {git = "https://github.com/GehadSalemFekry/sysinfo", branch="modeer_changes"}
dirs-next = "2.0.0"
flate2 = "1.0.22"
signal-hook = "~0.3.14"
libc = "0.2"
unicode-width = "0.1.9"
execute = "0.2.12"
dirs = "5.0.1"